# -gdal_cmake

./: CMakeLists.txt
cmake/: GdalConfig.cmake  gdal_alg.cmake  gdal_apps.cmake  gdal_frmts.cmake  gdal_gcore.cmake  gdal_ogr.cmake  gdal_port.cmake
frmts/georaster/: georaster_wrapper.cpp
frmts/gtiff/libtiff/: tif_jpeg.c  tif_ojpeg.c
frmts/kmlsuperoverlay/: kmlsuperoverlaydataset.cpp
frmts/raw/: lcpdataset.cpp
gcore/: CMakeLists.txt
ogr/: ogr_geocoding.cpp  ogr_srs_ozi.cpp
ogr/ogrsf_frmts/filegdb/: FGdbDatasource.cpp  FGdbDriver.cpp  ogr_fgdb.h
ogr/ogrsf_frmts/geojson/jsonc/: json_util.c
ogr/ogrsf_frmts/mssqlspatial/: ogr_mssqlspatial.h  ogrmssqlspatialdatasource.cpp  ogrmssqlspatialtablelayer.cpp
ogr/ogrsf_frmts/pgdump/: ogrpgdumpdatasource.cpp  ogrpgdumplayer.cpp
port/: CMakeLists.txt  cpl_config.h.cmake
